--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="learning.shinesdev.mymovies2">
+    package="learning.shinesdev.mymoviesapi">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,12 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".DetailTVShowActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name="learning.shinesdev.mymoviesapi.DetailTVShowActivity"
+            android:parentActivityName="learning.shinesdev.mymoviesapi.MainActivity" />
         <activity
-            android:name=".DetailMovieActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity">
+            android:name="learning.shinesdev.mymoviesapi.DetailMovieActivity"
+            android:parentActivityName="learning.shinesdev.mymoviesapi.MainActivity" />
+        <activity android:name="learning.shinesdev.mymoviesapi.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
