--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,21 +32,26 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
-
+    // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    //view-model
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
 
-    /* LiveData lib*/
+    /* LiveData*/
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:runtime:1.1.1"
     implementation "android.arch.lifecycle:common-java8:1.1.1"
 
+    /* Room Database */
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    /* Sweet Alert */
+    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+
+    // -------------------------------------
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
