--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="learning.shinesdev.mymoviesapi">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -16,15 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="learning.shinesdev.mymoviesapi.DetailTVShowActivity"
-            android:parentActivityName="learning.shinesdev.mymoviesapi.MainActivity" />
-        <activity
-            android:name="learning.shinesdev.mymoviesapi.DetailMovieActivity"
-            android:parentActivityName="learning.shinesdev.mymoviesapi.MainActivity" />
-        <activity android:name="learning.shinesdev.mymoviesapi.MainActivity">
+            android:name=".activity.detail.DetailMovieActivity"
+            android:parentActivityName=".activity.home.MainActivity" />
+        <activity android:name=".activity.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
